--- a/src/app/shared/layouts/footer/footer.component.html
+++ b/src/app/shared/layouts/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<footer class="container">
+  <p class="float-right"><strong>Angular CRM</strong>
+  </p>
+  <p>&reg; 2024 - &copy;
+    <a target="_bank" href="">
+      Rishabh Codes
+    </a>
+  </p>
+</footer>
