Implemented UserServices and Models

--- a/src/app/shared/layouts/footer/footer.component.html
+++ b/src/app/shared/layouts/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="container">
+<footer class="container-fluid">
   <p class="float-right"><strong>Angular CRM</strong>
   </p>
   <p>&reg; 2024 - &copy;
