--- a/src/app/customer/signin-signup/signin-signup.component.html
+++ b/src/app/customer/signin-signup/signin-signup.component.html
@@ -1,1 +1,201 @@
-<p>signin-signup works!</p>
+<div class="jumbotrom">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <h3>Registration - Angular 17 Reactive Forms with Validation</h3>
+        <form action="">
+          <!-- Name Field -->
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="name"
+              formControlName="name"
+            />
+          </div>
+          <!-- Mobile Number Field -->
+          <div class="form-group">
+            <label for="mobile">Mobile Number</label>
+            <input
+              type="tel"
+              class="form-control"
+              id="mobile"
+              formControlName="mobNumber"
+            />
+          </div>
+          <!-- Age Field -->
+          <div class="form-group">
+            <label for="age">Enter Your Age</label>
+            <input
+              type="number"
+              class="form-control"
+              id="age"
+              formControlName="age"
+            />
+          </div>
+          <!-- DOB Field -->
+          <div class="form-group">
+            <label for="dob">Enter Your DOB</label>
+            <input
+              type="date"
+              class="form-control"
+              id="dob"
+              formControlName="dob"
+            />
+          </div>
+
+          <!-- New Row: Email -->
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="email">Email</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                placeholder="mehrotrarishabh100@gmail.com"
+                formControlName="email"
+              />
+            </div>
+          </div>
+
+          <!-- Address Fields -->
+          <div class="form-group">
+            <label for="address">Address</label>
+            <input
+              type="text"
+              class="form-control"
+              id="address"
+              placeholder="1234 street"
+              formControlName="addLine1"
+            />
+          </div>
+          <div class="form-group">
+            <label for="address2">Address 2</label>
+            <input
+              type="text"
+              class="form-control"
+              id="address2"
+              placeholder="Apartment, studio, or floor"
+              formControlName="addLine2"
+            />
+          </div>
+
+          <!-- City, State, Zip -->
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="city">City</label>
+              <input
+                type="text"
+                class="form-control"
+                id="city"
+                placeholder="City name"
+                formControlName="city"
+              />
+            </div>
+            <div class="form-group col-md-4">
+              <label for="state">State</label>
+              <select id="state" class="form-control" formControlName="state">
+                <option selected>Choose...</option>
+                <option>Option 1</option>
+                <option>Option 2</option>
+              </select>
+            </div>
+            <div class="form-group col-md-2">
+              <label for="zip">Zip Code</label>
+              <input
+                type="text"
+                class="form-control"
+                id="zip"
+                placeholder="Zip Code"
+                formControlName="zipCode"
+              />
+            </div>
+          </div>
+
+          <!-- Language -->
+          <div class="form-group">
+            <label for="language">Language</label>
+            <select
+              multiple
+              class="form-control"
+              id="language"
+              formControlName="language"
+            >
+              <option>Hindi</option>
+              <option>English</option>
+              <option>Telugu</option>
+              <option>Odiya</option>
+              <option>Bhojpuri</option>
+              <option>Others</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label for="gender">Gender</label>
+            <div class="form-check form-check-inline">
+              <input
+                type="radio"
+                class="form-check-inline"
+                formControlName="gender"
+                value="Male"
+              />
+              <label for="male" class="form-check-inline">Male</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input
+                type="radio"
+                class="form-check-inline"
+                formControlName="gender"
+                value="Female"
+              />
+              <label for="female" class="form-check-inline">Female</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input
+                type="radio"
+                class="form-check-inline"
+                formControlName="gender"
+                value="Others"
+                disabled
+              />
+              <label for="others" class="form-check-inline">Others</label>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="somethingAboutYou">Something About You</label>
+            <textarea
+              class="form-control"
+              rows="3"
+              formControlName="aboutYou"
+            ></textarea>
+          </div>
+
+          <div class="form-group">
+            <label for="uploadPhoto">Upload Your Photo</label>
+            <input
+              type="file"
+              class="form-control"
+              formControlName="uploadPhoto"
+            />
+          </div>
+
+          <div class="form-group">
+            <input
+              type="chechbox"
+              class="form-check-inline"
+              formControlName="agreetc"
+            />
+            <label for="agreetc" class="form-check-inline"
+              >Terms and Conditions</label
+            >
+          </div>
+
+          <!-- Submit Button -->
+          <button type="submit" class="btn btn-primary">Register</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
