--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="py-5 text-center container">
   <div class="row py-lg-5">
     <div class="col-lg-6 col-md-8 mx-auto">
-      <h1 class="fw-light">E-Commerce Application</h1>
+      <h1 class="fw-light">CRM Application</h1>
       <p class="lead text-body-secondary">
         Something short and leading about the collection below its contents, the
         creator etc.
